# tic_tac_toe

./: .gitignore  README.md  __init__.py  app.py  client.py  models.py  openenv.yaml  play.py  pyproject.toml
server/: Dockerfile  __init__.py  app.py  tic_tac_toe_environment.py
